[package]
name = "ptv"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A Rust library for the Public Transport Victoria (PTV) API"
repository = "https://github.com/tascord/ptvrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
colored = "2.1.0"
derive_more = "0.99.18"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
itertools = "0.13.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha1 = "0.10.6"
to_and_fro = "0.5.0"
tokio = { version = "1.36.0", features = ["full"] }
url-escape = "0.1.1"

[dev-dependencies]
futures = "0.3.30"
ptvrs-macros = { path = "ptvrs-macros" }


[workspace]
members = ["ptvrs-macros"]
